tests/snapshots/tests__collapse_single_statement@simple-function.lua.snap
---
source: tests/tests.rs
expression: "format_code(&contents,\n        Config::default().with_collapse_simple_statement(CollapseSimpleStatement::Always),\n        None, OutputVerification::None).unwrap()"
---
function foo() return bar end

