tests/snapshots/tests__full_moon_test_suite@assignment-3.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
-- Crazy assignment code from AmaranthineCodices
a, b, c.d.e[f][g][1], h:i().j[k]:l()[m] = true, false, 1, 4

