tests/snapshots/tests__full_moon_test_suite@assignment-4.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::Lua51)"
input_file: tests/inputs-full_moon/assignment-4.lua
---
a = 1
b = 2

