tests/snapshots/tests__full_moon_test_suite@body-with-spaces.lua.snap
---
source: tests/tests.rs
expression: "format(&contents, LuaVersion::Lua51)"
input_file: tests/inputs-full_moon/body-with-spaces.lua
---
do
end

