tests/snapshots/tests__full_moon_test_suite@exponents.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local num = 1e5
local num2 = 1e-5
local num3 = 1e+5

