tests/snapshots/tests__full_moon_test_suite@fractional-numbers.lua.snap
---
source: tests/tests.rs
expression: format(&contents)
---
local num = 0.5
local num2 = 0.5e5
local num3 = 0.5
local num4 = 0.5e5
local num5 = 1.

