tests/snapshots/tests__full_moon_test_suite@generic-for-loop-1.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
for index, value in pairs(list) do
	call(index, value)
end

