tests/snapshots/tests__full_moon_test_suite@generic-for-loop-2.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
for index, value in next, list do
	call(index, value)
end

