tests/snapshots/tests__full_moon_test_suite@goto-as-identifier.lua.snap
---
source: tests/tests.rs
expression: format(&contents)

---
-- goto as an identifier is permitted in lua 5.1
self.goto("foo")

